cmake_minimum_required(VERSION 3.21)
project(CLionProjects)

set(CMAKE_CXX_STANDARD 14)

add_executable(CLionProjects 基础/Lesson_1_简介.cpp 基础/Lesson_1_简介.h 基础/Lesson_2_基本语法.cpp 基础/Lesson_2_基本语法.h 基础/Lesson_3_数据类型.cpp 基础/Lesson_3_数据类型.h 基础/Lesson_4_变量类型.cpp 基础/Lesson_4_变量类型.h 基础/Lesson_5_变量作用域.cpp 基础/Lesson_5_变量作用域.h 基础/Lesson_6_常量.cpp 基础/Lesson_6_常量.h 基础/Lesson_7_修饰符.cpp 基础/Lesson_7_修饰符.h 基础/Lesson_8_存储类.cpp 基础/Lesson_8_存储类.h 基础/Lesson_8_support/Lesson_8_support.cpp 基础/Lesson_8_support/Lesson_8_support.h 基础/Lesson_9_运算符.cpp 基础/Lesson_9_运算符.h 基础/Lesson_10_函数.cpp 基础/Lesson_10_函数.h 基础/Lesson_11_数字.cpp 基础/Lesson_11_数字.h 基础/Lesson_12_数组.cpp 基础/Lesson_12_数组.h 基础/Lesson_13_字符串.cpp 基础/Lesson_13_字符串.h 基础/Lesson_14_指针和引用.cpp 基础/Lesson_14_指针和引用.h 基础/Lesson_15_日期和时间.cpp 基础/Lesson_15_日期和时间.h 基础/Lesson_16_基本输入输出.cpp 基础/Lesson_16_基本输入输出.h 基础/Lesson_17_数据结构.cpp 基础/Lesson_17_数据结构.h 面相对象/Lesson_1_类和对象.cpp 面相对象/Lesson_1_类和对象.h)
